--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,11 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [ {
+      // Serves index.html for requests to files or directories that do not exist
+      "source": "**",
+      "destination": "/index.html"
+    } ]
   }
 }
